# general_download_manager

./: .gitignore  gen_dl.env  main.py  pyproject.toml  readme.md
app/: dependencies.py  main.py  models.py
app/internal/: admin.py  admin_db.py  security.py
app/routers/: admin.py  jobs.py
