[project]
name = "general-download-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "isodate>=0.7.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
